openmediavault (7.5.0-1) stable; urgency=low

  * Try to prevent connection errors when installing plugins
    or package updates via UI.
  * Issue #1875: Add option to select the Wi-Fi frequency band.
  * Issue #1878: Fix netplan config parsing errors.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Dec 2024 13:10:58 +0100

openmediavault (7.4.17-2) stable; urgency=low

  * Fix a translation problem with several form fields.
  * Add the `Follow symlinks` and `Wide links` options to SMB shares
    and home directories.
  * Fix usage threshold render issue in datatable progress bars.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Dec 2024 09:36:39 +0100

openmediavault (7.4.16-1) stable; urgency=low

  * Several improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Dec 2024 19:55:12 +0100

openmediavault (7.4.15-1) stable; urgency=low

  * Issue #1865: Remove support for WPA3 authentication for wireless
    connections. netplan does not support that in Debian 12.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 05 Dec 2024 19:28:18 +0100

openmediavault (7.4.15-2) stable; urgency=low

  * Several improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 26 Nov 2024 19:58:29 +0100

openmediavault (7.4.14-1) stable; urgency=low

  * Add rudimentary support for the obsolete file systems `reiserfs`
    and `reiser4`. The userland apps must be installed manually via
    the Debian packages `reiserfsprogs` and `reiser4progs`.
  * Issue #1859: Fix a problem when disabling the user home directory.
  * Issue #1862: Use LC_ALL environment variable instead of LANG.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 18 Nov 2024 15:02:55 +0100

openmediavault (7.4.13-1) stable; urgency=low

  * Fix apticron cron script.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Nov 2024 10:13:25 +0100

openmediavault (7.4.12-3) stable; urgency=low

  * Update locale files.