@@ -62,7 +62,7 @@
 		},
 		"easupport": {
 			"type": "boolean",
-			"default": false
+			"default": true
 		},
 		"storedosattributes": {
 			"type": "boolean",
